# rust-on-bbc-microbit

./: .gitignore  .yotta.json  Cargo.toml  README.md  cortex-m0.json  flash.sh  module.json
cpp/: rust.cmake
lancaster-university/mbed-classic/: README.md
lancaster-university/mbed-classic/targets/cmsis/TARGET_NORDIC/TARGET_MCU_NRF51822/TOOLCHAIN_GCC_ARM/: startup_NRF51822.S
lancaster-university/microbit-targets/: README.md
lancaster-university/microbit-targets/bbc-microbit-classic-gcc/bootloader/: BLE_BOOTLOADER_RESERVED.hex
lancaster-university/microbit-targets/bbc-microbit-classic-gcc/ld/: NRF51822.ld
source/: main.cpp
src/: boilerplate.rs  busy_loop.rs  gpio.rs  lib.rs  pins.rs  serial.rs
